--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        java: [ 11, 12, 13 ]
+        java: [ 11 ]
     name: Java ${{ matrix.java }} compile
     steps:
       - name: Checkout Source Code
