--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,13 @@
         </dependency>
         <!-- /Jetty servlet -->
 
+        <!-- PAUL CHECK HERE-->
+        <dependency>
+            <groupId>com.ubirch.testlib</groupId>
+            <artifactId>ubirch-lib-test</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <licenses>
