--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,13 @@
 name: Build sample project
- 
-on: workflow_dispatch
- 
+
+on: push
+
 jobs:
   compile:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        java: [ 11 ]
+        java: [ 8 ]
     name: Java ${{ matrix.java }} compile
     steps:
       - name: Checkout Source Code
@@ -19,30 +19,36 @@ jobs:
           java-package: jdk
           java-version: ${{ matrix.java }}
       - name: Compile the Project
-        run: mvn -B compile
+        run: mvn -B compile -Drevision=1.0.${{ github.run_number }}-SNAPSHOT
   build:
     runs-on: ubuntu-20.04
     needs: compile
     name: Build the Maven Project
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
           distribution: 'adopt'
-          java-version: '11'
+          java-version: '8'
           java-package: jdk
-    - name: Build and test project
-      working-directory: github-actions-java-maven
-      run: mvn -B verify
-    - name: Upload Maven build artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: artifact.jar
-        path: github-actions-java-maven/target/github-actions-java-maven.jar
+      - name: Build and test project
+        run: mvn -B verify -Drevision=1.0.${{ github.run_number }}-SNAPSHOT
+      - run: ls -lah target
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: 1.0.${{ github.run_number }}-SNAPSHOT
+          files: |
+            target/*.jar
+
+#    - name: Upload Maven build artifact
+#      uses: actions/upload-artifact@v2
+#      with:
+#        path: target/
