--- a/pom.xml
+++ b/pom.xml
@@ -222,9 +222,9 @@
 
         <!-- PAUL CHECK HERE-->
         <dependency>
-            <groupId>com.ubirch.testlib</groupId>
-            <artifactId>ubirch-lib-test</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <groupId>com.github.behoof4mind</groupId>
+            <artifactId>ubirch-test-maven-lib</artifactId>
+            <version>1.0.35-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
