--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <!-- info -->
     <groupId>com.ubirch.test</groupId>
     <artifactId>web-server</artifactId>
-    <version>0.1.0</version>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <organization>
@@ -33,7 +33,7 @@
 
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
-
+        <revision>1.0.0-SNAPSHOT</revision>
         <!-- versions -->
 
         <scala.logging.version>3.9.0</scala.logging.version>
@@ -446,7 +446,7 @@
                         <SERVICE_NAME>${project.name}</SERVICE_NAME>
                         <JAR_LIBS>target/lib</JAR_LIBS>
                         <SWAGGER_UI>src/main/swagger-ui</SWAGGER_UI>
-                        <JAR_FILE>target/${project.build.finalName}.${project.packaging}</JAR_FILE>
+                        <JAR_FILE>target/${project.artifactId}-${project.version}.${project.packaging}</JAR_FILE>
                     </buildArgs>
                 </configuration>
             </plugin>
