--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,12 @@ jobs:
       - name: Build and test project
         run: mvn -B verify -Drevision=1.0.${{ github.run_number }}-SNAPSHOT
       - run: ls -lah target
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: iitsc.azurecr.io
+          username: iitsc
+          password: ${{ secrets.ACR_PASSWORD }}
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
