--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build and test project
         run: mvn -B verify -Drevision=1.0.${{ github.run_number }}-SNAPSHOT
       - run: ls -lah target
-      - name: Login to GitHub Container Registry
+      - name: Login to Azure Container Registry
         uses: docker/login-action@v1
         with:
           registry: iitsc.azurecr.io
