--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,8 +45,7 @@ jobs:
           java-version: '8'
           java-package: jdk
       - name: Build and test project
-#        run: mvn -B deploy -Drevision=1.0.${{ github.run_number }}-SNAPSHOT
-        run: mvn com.spotify:dockerfile-maven-plugin:1.4.4:help -Ddetail=true
+        run: mvn -B deploy -Drevision=1.0.${{ github.run_number }}-SNAPSHOT
       - run: ls -lah target
       - name: Release
         uses: softprops/action-gh-release@v1
