--- a/.github/workflows/build-unstable.yml
+++ b/.github/workflows/build-unstable.yml
@@ -7,10 +7,16 @@ on:
       - edited
       - reopened
       - synchronize
+    paths:
+      - '!.github/**'
+      - '!README.md'
+      - '!pom.xml'
 
 jobs:
   compile:
     runs-on: ubuntu-20.04
+    outputs:
+      new_version: ${{ steps.version_step.outputs.nv }}
     strategy:
       matrix:
         java: [ 8 ]
@@ -30,11 +36,23 @@ jobs:
         id: release_version
         env:
           token: ${{ secrets.GITHUB_TOKEN }}
-          repository: "nodejs/node"
+          repository: ${{github.repository}}
           type: "stable"
+      - run: echo ${{github.repository}}
+
+      - name: Set default version if release is not found
+        id: version_step
+        run: |
+          if [[ "${{ steps.release_version.outputs.release }}" = "" ]]; then
+            echo "NEW_VERSION=$(echo "0.0.1-${GITHUB_SHA::8}")" >> $GITHUB_ENV
+            echo "::set-output name=nv::0.0.1-${GITHUB_SHA::8}"
+          else
+            echo "NEW_VERSION=$(echo "${{ steps.release_version.outputs.release }}-${GITHUB_SHA::8}")" >> $GITHUB_ENV
+            echo "::set-output name=nv::${{ steps.release_version.outputs.release }}-${GITHUB_SHA::8}"
+          fi
 
       - name: Compile the Project
-        run: mvn -B compile -Drevision=${{ steps.release_version.outputs.release }}-${GITHUB_SHA::8}
+        run: mvn -B compile -Drevision=${{ env.NEW_VERSION }}
   build:
     runs-on: ubuntu-20.04
     needs: compile
@@ -60,16 +78,11 @@ jobs:
           java-version: '8'
           java-package: jdk
       - name: Build and test project
-        run: mvn -B deploy -Drevision=${{ steps.release_version.outputs.release }}-${GITHUB_SHA::8}
+        run: mvn -B deploy -Drevision=${{ needs.compile.outputs.new_version }}
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ steps.release_version.outputs.release }}-${GITHUB_SHA::8}
+          tag_name: ${{ needs.compile.outputs.new_version }}
           prerelease: true
           files: |
             target/*.jar
-
-#    - name: Upload Maven build artifact
-#      uses: actions/upload-artifact@v2
-#      with:
-#        path: target/
