--- a/.github/workflows/enforce-pr-labels.yml
+++ b/.github/workflows/enforce-pr-labels.yml
@@ -1,4 +1,4 @@
-name: Enforce PR labels (major, minor or patch)
+name: Enforce PR labels
 
 on:
   pull_request:
@@ -6,18 +6,20 @@ on:
       - labeled
       - unlabeled
       - opened
+      - edited
+      - synchronize
 
 jobs:
   enforce-label:
-    name: Labels check
+    name: Labels check (major, minor or patch)
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Looking for any (major, minor or patch) label
-        uses: yogevbd/enforce-label-action@2.1.0
-        with:
-          REQUIRED_LABELS_ANY: "major,minor,patch"
-          REQUIRED_LABELS_ANY_DESCRIPTION: "Select at least one label ['major','minor','patch']"
+      - name: Fail if there is no correct label
+        if: |
+          !contains(github.event.pull_request.labels.*.name, 'major')
+          && !contains(github.event.pull_request.labels.*.name, 'minor')
+          && !contains(github.event.pull_request.labels.*.name, 'patch')
+        run: |
+          echo "::group::Correct label NOT found"
+          echo "::endgroup::"
+          exit 1
