--- a/.github/workflows/build-unstable.yml
+++ b/.github/workflows/build-unstable.yml
@@ -79,3 +79,19 @@ jobs:
           prerelease: true
           files: |
             target/*.jar
+      - uses: actions/github-script@0.9.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `*Pusher: @${{ github.actor }}
+            Action: \`${{ github.event_name }}\`
+            Released version after merge: \`${{ steps.bump_semver.outputs.new_version }}\`*
+            Current version: \`${{ needs.compile.outputs.new_version }}\
+            Docker image: \`iitsc.azurecr.io/images/ubirch-test-web-server:\`${{ steps.bump_semver.outputs.new_version }}\`\``;
+
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
