--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <!-- info -->
     <groupId>com.ubirch.test</groupId>
     <artifactId>web-server</artifactId>
-    <version>${revision}</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <organization>
