--- a/.github/workflows/check-supposed-version.yml
+++ b/.github/workflows/check-supposed-version.yml
@@ -8,6 +8,11 @@ on:
       - opened
       - edited
       - synchronize
+    paths-ignore:
+      - '.github/**'
+      - '.gitignore'
+      - 'pom.xml'
+      - 'README.md'
 
 jobs:
   enforce-label:
@@ -77,7 +82,6 @@ jobs:
         run: |
           echo "::group::Version that should be released already exists in GitHub tags"
           exit 1
-
       - uses: actions/github-script@0.9.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -90,3 +94,11 @@ jobs:
               repo: context.repo.repo,
               body: output
             })
+#      - name: Change version
+#        run: mvn versions:set versions:commit -DnewVersion=${{ steps.bump_semver.outputs.new_version }}
+#      - name: Commit and push updated pom.xml
+#        uses: EndBug/add-and-commit@v7
+#        with:
+#          add: pom.xml
+#          message: "[Auto-update] pom.xml version updated"
+#          branch: ${{ github.head_ref }}
