--- a/.github/workflows/build-unstable.yml
+++ b/.github/workflows/build-unstable.yml
@@ -62,20 +62,27 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Login to Azure Container Registry
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: iitsc.azurecr.io
-          username: iitsc
-          password: ${{ secrets.ACR_PASSWORD }}
+          registry: docker.io
+          username: behoof4mind
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: '8'
           java-package: jdk
+
+      - name: Get supposed release version
+        id: release_version
+        run: |
+          echo "::set-output name=release::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)"
       - name: Build and test project
-        run: mvn -B deploy -DnewVersion=${{ needs.compile.outputs.new_version }}
+        run: |
+          mvn versions:set -DnewVersion=${{ needs.compile.outputs.new_version }} -DprocessAllModules
+          mvn -B deploy
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
@@ -83,16 +90,32 @@ jobs:
           prerelease: true
           files: |
             target/*.jar
+      - name: Check major label
+        if: contains(github.event.pull_request.labels.*.name, 'major')
+        run: echo "CORRECT_LABEL=$(echo "major")" >> $GITHUB_ENV
+      - name: Check minor label
+        if: contains(github.event.pull_request.labels.*.name, 'minor')
+        run: echo "CORRECT_LABEL=$(echo "minor")" >> $GITHUB_ENV
+      - name: Check patch label
+        if: contains(github.event.pull_request.labels.*.name, 'patch')
+        run: echo "CORRECT_LABEL=$(echo "patch")" >> $GITHUB_ENV
+
+      - name: Calculate new version
+        uses: actions-ecosystem/action-bump-semver@v1
+        id: bump_semver
+        with:
+          current_version: ${{ steps.release_version.outputs.release }}
+          level: ${{ env.CORRECT_LABEL }}
       - uses: actions/github-script@0.9.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const output = `Pusher: @${{ github.actor }}
             Action: \`${{ github.event_name }}\`
-            Released version after merge: \`${{ needs.compile.outputs.new_version }}\`
+            Released version after merge: \`${{ steps.bump_semver.outputs.new_version }}\`
             Current version: \`${{ needs.compile.outputs.new_version }}\`
-            Docker image: \`iitsc.azurecr.io/images/ubirch-test-web-server:${{ needs.compile.outputs.new_version }}\`
-            Your application link: https://ci.dev.ubirch.com/applications/${{ github.event.repository.name }}`;
+            Docker image: \`docker.io/ubirch-test-web-server:${{ needs.compile.outputs.new_version }}\`
+            Your application link: [dev/${{ github.event.repository.name }}](https://ci.dev.ubirch.com/applications/${{ github.event.repository.name }})`;
 
             github.issues.createComment({
               issue_number: context.issue.number,
