--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
           java-version: ${{ matrix.java }}
 
       - name: Compile the Project
-        run: mvn -B compile -DnewVersion=${{ steps.bump_semver.outputs.new_version }}
+        run: mvn -B compile -DnewVersion=${{ steps.bump_semver.outputs.new_version }} -DprocessAllModules
 
   build:
     runs-on: ubuntu-20.04
@@ -93,12 +93,12 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Login to Azure Container Registry
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: iitsc.azurecr.io
-          username: iitsc
-          password: ${{ secrets.ACR_PASSWORD }}
+          registry: docker.io
+          username: behoof4mind
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
@@ -106,7 +106,7 @@ jobs:
           java-version: '8'
           java-package: jdk
       - name: Change version
-        run: mvn versions:set versions:commit -DnewVersion=${{ needs.compile.outputs.new_version }}
+        run: mvn versions:set versions:commit -DnewVersion=${{ needs.compile.outputs.new_version }} -DprocessAllModules
       - name: Commit and push updated pom.xml
         uses: EndBug/add-and-commit@v7
         with:
@@ -114,7 +114,7 @@ jobs:
           message: "[Auto-update] pom.xml version updated"
           branch: ${{ github.head_ref }}
       - name: Build and test project
-        run: mvn -B deploy -DnewVersion=${{ needs.compile.outputs.new_version }}
+        run: mvn -B deploy -DnewVersion=${{ needs.compile.outputs.new_version }} -DprocessAllModules
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
