--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - 'push-action/**'
     paths:
       - '**'
       - '!chart/**'
@@ -108,11 +109,10 @@ jobs:
       - name: Change version
         run: mvn versions:set versions:commit -DnewVersion=${{ needs.compile.outputs.new_version }} -DprocessAllModules
       - name: Commit and push updated pom.xml
-        uses: EndBug/add-and-commit@v7
+        uses: CasperWA/push-protected@v2
         with:
-          add: pom.xml
-          message: "[Auto-update] pom.xml version updated"
-          branch: ${{ github.head_ref }}
+          token: ${{ secrets.TOKEN_DENIS }}
+          branch: main
       - name: Build and test project
         run: mvn -B deploy -DnewVersion=${{ needs.compile.outputs.new_version }} -DprocessAllModules
       - name: Release
