--- a/.github/workflows/build-unstable.yml
+++ b/.github/workflows/build-unstable.yml
@@ -49,7 +49,11 @@ jobs:
           java-package: jdk
           java-version: ${{ matrix.java }}
       - name: Compile the Project
-        run: mvn -B compile -DnewVersion=${{ env.NEW_VERSION }}
+        run: |
+          mvn versions:set -DnewVersion=${{ env.NEW_VERSION }} -DprocessAllModules
+          mvn versions:update-child-modules
+          mvn versions:commit -DprocessAllModules
+          mvn -B compile -DnewVersion=${{ env.NEW_VERSION }}
   build:
     runs-on: ubuntu-20.04
     needs: compile
